# equity-risk-intelligence-management

./: .env.example  .gitignore  LICENSE  Makefile  README.md  directory_details.md  docker-compose.yml  engine_specs.md  render.yaml
backend/: README.md  alembic.ini  erims_dev.db  give_to_alice.sql  pyproject.toml  requirements.lock.txt  requirements.txt  seed.sql  seed_live_test.sql  seed_more.sql
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  health.py  router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  (+5 more)
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  mongo.py  postgres.py
backend/app/db/migrations/: README.md  env.py  script.py.mako
backend/app/db/models/: __init__.py  base.py  equity.py  portfolio.py  risk.py  user.py
backend/app/db/repositories/: __init__.py
backend/app/engine/: __init__.py
backend/app/engine/data/: __init__.py  market_data.py  portfolio_data.py
backend/app/engine/features/: __init__.py
backend/app/engine/forecasting/: __init__.py  volatility.py
backend/app/engine/monitoring/: __init__.py  alerts.py
backend/app/engine/optimization/: __init__.py  optimizer.py
backend/app/engine/pipelines/: __init__.py
backend/app/engine/risk/: __init__.py  metrics.py
backend/app/schemas/: __init__.py  equity.py  portfolio.py  report.py  risk.py  user.py
backend/app/services/: __init__.py  auth_service.py  portfolio_service.py  report_service.py  risk_service.py
backend/infra/mongo/: README.md
backend/infra/postgres/init/: 001_schema.sql
backend/tests/: conftest.py  test_backend_integration.py  test_placeholder.py
(+48 files in other folders)
